[package]
name = "bbh-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
lazy_static = "1.5.0"
serde = "1.0.203"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
